@@ -62,7 +62,7 @@ Glenn Washburn <crass@berlios.de>
 Daniel Gerber <daniel.g.gerber@gmail.com>
 Angelo Motolla <a.mottola@gmail.com>
 C Anthony Risinger <anthony@extof.me>
-
+Serge Tarkovski <serge.tarkovski@gmail.com>
 
 
 Erik gets a special mention for the contribution of the "Showcase".
