@@ -61,6 +61,7 @@ Copyright: 2010 fukazawa (http://code.google.com/u/fukazawa/)
 Copyright: 2010 Glenn Washburn <crass@berlios.de>
 Copyright: 2010 Daniel Gerber <daniel.g.gerber@gmail.com>
 Copyright: 2010 Angelo Motolla <a.mottola@gmail.com>
+Copyright: 2010 Serge Tarkovski <serge.tarkovski@gmail.com>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
