@@ -45,6 +45,12 @@ a:visited {
   cursor: default;
 }
 
+.gwt-PopupPanelGlass {
+  background-color: #000;
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+}
+
 .gwt-FileUpload {
 }
 
