@@ -105,3 +105,9 @@
 .gwt-DialogBox .Contents {
     padding: 10px;
 }
+
+.gwt-PopupPanelGlass {
+    background-color: #000;
+    opacity: 0.3;
+    filter: alpha(opacity=30);
+}
