@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Added "glass" opaque background option to PopupPanel, by Serge Tarkovski 
+
  * Added string zfill function, thanks to Angelo Motolla.
 
  * Added datetime module, thanks to Angelo Motolla.
